docs/versioned_docs/version-0.8.0/api/mellea/stdlib/requirements/requirement.mdx
---
title: "mellea.stdlib.requirements.requirement"
sidebar_label: "mellea.stdlib.requirements.requirement"
description: "Requirements are a special type of Component used as input to the \"validate\" step in Instruct/Validate/Repair design patterns."
---

Requirements are a special type of Component used as input to the "validate" step in Instruct/Validate/Repair design patterns.





## Functions

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />


### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `requirement_check_to_bool` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/stdlib/requirements/requirement.py#L32" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#requirement_check_to_bool}

```python
requirement_check_to_bool(x: CBlock | ModelOutputThunk | str) -> bool
```


Convert a `requirement-check` adapter output string to a boolean result.

Parses the JSON output produced by the `requirement-check` adapter and
returns `True` when the score exceeds 0.5.

**Args:**
- `x`: Adapter output string or CBlock containing JSON with the contract
`\{"requirement_check"\: \{"score"\: <float>\}\}`.

**Returns:**
- `True` if the extracted score exceeds 0.5, `False` otherwise.

**Raises:**
- `json.JSONDecodeError`: If `x` is not valid JSON.
- `ValueError`: If the parsed JSON is not an object (e.g. a list, string, or
number).
- `AdapterSchemaMismatchError`: If the parsed output does not contain the
expected `requirement_check.score` structure, or if the score is
not a finite number in the range 0.0-1.0.  Callers that previously
treated `False` as "requirement not met" must now catch this error
separately.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `reqify` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/stdlib/requirements/requirement.py#L126" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#reqify}

```python
reqify(r: str | Requirement) -> Requirement
```


Map strings to Requirements.

This is a utility method for functions that allow you to pass in Requirements as either explicit Requirement objects or strings that you intend to be interpreted as requirements.

**Args:**
- `r`: A [`Requirement`](../../core/requirement#class-requirement) object or a plain string description to wrap as one.

**Returns:**
- A [`Requirement`](../../core/requirement#class-requirement) instance.

**Raises:**
- `Exception`: If `r` is neither a `str` nor a [`Requirement`](../../core/requirement#class-requirement) instance.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `req` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/stdlib/requirements/requirement.py#L148" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#req}

```python
req(*args, **kwargs) -> Requirement
```


Shorthand for `Requirement.__init__`.

**Args:**
- `*args`: Positional arguments forwarded to `Requirement.__init__`.
- `**kwargs`: Keyword arguments forwarded to `Requirement.__init__`.

**Returns:**
- A new [`Requirement`](../../core/requirement#class-requirement) instance.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `check` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/stdlib/requirements/requirement.py#L161" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#check}

```python
check(*args, **kwargs) -> Requirement
```


Shorthand for `Requirement.__init__(..., check_only=True)`.

**Args:**
- `*args`: Positional arguments forwarded to `Requirement.__init__`.
- `**kwargs`: Keyword arguments forwarded to `Requirement.__init__`.

**Returns:**
- A new [`Requirement`](../../core/requirement#class-requirement) instance with `check_only=True`.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `simple_validate` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/stdlib/requirements/requirement.py#L186" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#simple_validate}

```python
simple_validate(fn: Callable[[str], Any]) -> Callable[[Context], ValidationResult]
```


Syntactic sugar for writing validation functions that only operate over the last output from the model (interpreted as a string).

This is useful when your validation logic only depends upon the most recent model output. For example:

`Requirement("Answer 'yes' or 'no'", simple_validate(lambda x: x == 'yes' or x == 'no')`

Validation functions operate over [`Context`](../../core/base#class-context). Often you do not care about the entire context, and just want to consider the most recent output from the model.

**Args:**
- `fn`: the simple validation function that takes a string and returns either a bool or (bool, str)
- `reason`: only used if the provided function returns a bool; if the validation function fails, a static reason for that failure to give to the llm when repairing

**Returns:**
- A validation function that takes a [`Context`](../../core/base#class-context) and returns a [`ValidationResult`](../../core/requirement#class-validationresult).

**Raises:**
- `ValueError`: If `fn` returns a type other than `bool` or
`tuple[bool, str]`.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

## Classes

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />


### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `LLMaJRequirement` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/stdlib/requirements/requirement.py#L21" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-llmajrequirement}


A requirement that always uses LLM-as-a-Judge. Any available constraint ALoRA will be ignored.

**Attributes:**
- `use_aloras`: Always `False` for this class; ALoRA adapters are
never used even if they are available.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `ALoraRequirement` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.8.0/mellea/stdlib/requirements/requirement.py#L65" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-alorarequirement}


A requirement validated by an ALoRA adapter; falls back to LLM-as-a-Judge only on generation error.

If the adapter is unavailable (e.g. cannot be loaded), `mellea` uses
LLMaJ for that requirement instead.  That is the only case where LLMaJ
will be used.

If the adapter generates output but the output **fails schema validation**
(`requirement_check_to_bool` raises `AdapterSchemaMismatchError`), the
error is surfaced on the returned `ValidationResult.error` by
`Requirement.validate` — it is not caught here and does not trigger the
LLMaJ fallback, which covers only generation errors.  The result fails
closed (`bool(result)` is `False`), so schema drift is neither silently
treated as a pass nor raised as an unexpected exception; callers can inspect
`result.error` to tell it apart from an ordinary "requirement not met".

**Args:**
- `description`: Human-readable requirement description.
- `intrinsic_name`: Name of the ALoRA intrinsic to use.
Defaults to `"requirement-check"`.
- `adapter_types`: Adapter types to look
up for `intrinsic_name`. Required when `intrinsic_name` is a
custom, non-catalog adapter function (see `Intrinsic`). Optional
for a catalog name, which otherwise supplies its own — but an
explicit value here overrides the catalog's, it is not ignored.

**Attributes:**
- `use_aloras`: Always `True`; this class always attempts to use
ALoRA adapters for validation.

**Raises:**
- `ValueError`: `intrinsic_name` is a custom, non-catalog adapter
function and `adapter_types` was not provided.

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />
